--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-router": "^4.5.1",
+        "vuex": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
